--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding: 25px;
+section {
+  border: 4px solid red;
+  min-height: 200px;
 }
-.header-right {
-  display: flex;
-  align-items: center;
-  gap: 9px;
+header,
+footer,
+main {
+  border: 4px solid blue;
+  min-height: 100px;
+}
+inner-column {
+  display: block;
+  border: 4px solid green;
+  padding: 10px;
 }
